# ugly_youtube

./: .gitignore  LICENSE  README.md  install.py  main.py  pyproject.toml
application/: app.py
application/templates/: base.html  index.html
ugly_youtube/: __init__.py  gui.py  http_request.py  objects.py
ugly_youtube/gui/: __init__.py  app.py
ugly_youtube/gui/templates/: base.html  index.html
