[tool.poetry]
name = "ugly-youtube"
version = "0.1.0"
description = ""
authors = ["pjpollot <pollot.pierre@gmail.com>"]
readme = "README.md"
packages = [{include = "ugly_youtube"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
