[tool.poetry]
name = "ugly-youtube"
version = "0.1.0"
description = ""
authors = ["pjpollot <pollot.pierre@gmail.com>"]
readme = "README.md"
packages = [{include = "ugly_youtube"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
flask = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
